--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ easyocr
 torchvision
 supervision==0.18.0
 openai==1.3.5
-transformers
+transformers==4.38.2
 ultralytics==8.3.70
 azure-identity
 numpy==1.26.4
@@ -30,3 +30,8 @@ screeninfo
 uiautomation
 dashscope
 groq
+flash_attn
+requests
+
+
+
